two-stage hi-res/placeholder image fade-out since there is no longer hidden overflow on their container

--- a/src/stylus/slides/image.styl
+++ b/src/stylus/slides/image.styl
@@ -27,18 +27,22 @@
   left 50%
   position absolute
   transform translateX(-50%)
+  transition opacity .5s
 
 .image__placeholder
   filter blur(5px)
+  opacity 1
   z-index 1
 
 .image__hi-res
   opacity 0
-  transition opacity .5s
   z-index 2
 
 .image__frame[ready] .image__hi-res
   opacity 1
+
+.image__placeholder[done]
+  opacity 0
 
 .image--multiple
   padding IMAGE_GAP_BASE 0 0
